updated catch exception type

--- a/unpackaged/main/default/classes/WS_SOM_OrderSummary_CapturePaymentAction.cls
+++ b/unpackaged/main/default/classes/WS_SOM_OrderSummary_CapturePaymentAction.cls
@@ -63,7 +63,6 @@ global with sharing class WS_SOM_OrderSummary_CapturePaymentAction {
                     if (requestAsString != null) {
                         requestAsString = requestAsString.replace(SOM_Constants.AMOUNT_CURRENCY, SOM_Constants.CAPTURE_CURRENCY_ATTRIBUTE);
                     }
-                    System.debug(requestAsString);
                     //make http callout
                     Http http = new Http();
                     HttpRequest httpRequest = new HttpRequest();
@@ -72,7 +71,6 @@ global with sharing class WS_SOM_OrderSummary_CapturePaymentAction {
                     httpRequest.setHeader('Content-Type', 'application/json;charset=UTF-8');
                     httpRequest.setBody(requestAsString);
                     HttpResponse httpResponse = http.send(httpRequest);
-                    System.debug('httpResponse.getBody : '+ httpResponse.getBody());
                     if (httpResponse.getStatusCode() == 200) {
                         //Read http response
                         Map<String, Object> httpResponseMap = (Map<String, Object>)JSON.deserializeUntyped(httpResponse.getBody());
@@ -89,20 +87,16 @@ global with sharing class WS_SOM_OrderSummary_CapturePaymentAction {
                         response.errorMessage = 'The status code returned was not expected: ' + httpResponse.getStatusCode() + ' ' + httpResponse.getStatus();
                     }
                 } else {
-                    System.debug('Payment Authorization is empty, orderSummaryId: ' + orderSummaryId);
                     response.isSucces     = false;
                     response.errorMessage = 'Payment Authorization is empty, orderSummaryId: ' + orderSummaryId;
                 }
             } else {
-                System.debug('Order Summary is not valid: ' + orderSummaryId);
                 response.isSucces     = false;
                 response.errorMessage = 'Order Summary is not valid: ' + orderSummaryId;
             }
-        } catch(System.QueryException ex) {
-            System.debug(ex.getMessage());
-            System.debug(ex.getStackTraceString());
+        } catch(Exception e) {
             response.isSucces     = false;
-            response.errorMessage = ex.getMessage();
+            response.errorMessage = e.getMessage();   
         }
 
         responseWrapper.add(response);
