--- a/unpackaged/main/default/classes/Batch_BackInStock_Test.cls
+++ b/unpackaged/main/default/classes/Batch_BackInStock_Test.cls
@@ -9,6 +9,7 @@
 -- -----------          -----------                 --------         ----------------------
 -- 17-03-2022           Mohamed Amine El Mandour    1.0              Initial version
 -- 14-05-2022           Bader Eddine Elkhal         2.0              updated version
+-- 24-04-2023			Paul-Louis MONY				3.0				 Add SFMCApiSettings data test and XML Soap Message into the mock
 ---------------------------------------------------------------------------------------
 */
 @isTest
@@ -74,7 +75,19 @@ private class Batch_BackInStock_Test {
 		SFMCAPISetting__c sfmcAPISetting = SFMCAPISetting__c.getOrgDefaults();
         sfmcAPISetting.BackInStockAutomationObjectId__c = '2d83649e-3c68-41de-9f4d-62e6af4f1bc7';
         sfmcAPISetting.LastSentEventId__c = 1;
-            
+        sfmcAPISetting.GrantType__c  ='grant_type';
+        sfmcAPISetting.clientId__c = 'myclientId';
+        sfmcAPISetting.clientSecret__c = 'myclientSecret';
+        sfmcAPISetting.AccountId__c = 1010101;
+        sfmcAPISetting.BackInStockDEExternalKey__c = '12345678901234567';
+        sfmcAPISetting.SoapAPIPerformRequestMsgNs2Attribute__c = 'urn:fault.partner.exacttarget.com';
+        sfmcAPISetting.SoapAPIPerformRequestMsgNsAttribute__c = 'http://exacttarget.com/wsdl/partnerAPI';
+        sfmcAPISetting.SoapAPIToMustUnderstandAttribute__c = 'https://mcbbs8wnxr8g8rgdkxwky2mxqrq4.soap.marketingcloudapis.com/Service.asmx	';
+        sfmcAPISetting.SoapAPIxmlnsaAttribute__c = 'http://schemas.xmlsoap.org/ws/2004/08/addressing';
+        sfmcAPISetting.SoapAPIxmlnssAttribute__c = 'http://www.w3.org/2003/05/soap-envelope';
+        sfmcAPISetting.SoapAPIxmlnsuAttribute__c='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-utility-1.0.xsd';
+        sfmcAPISetting.SoapAPIxmlnsxsdAttribute__c='http://www.w3.org/2001/XMLSchema';
+        sfmcAPISetting.SoapAPIxmlnsxsiAttribute__c='http://www.w3.org/2001/XMLSchema-instance';
         insert sfmcAPISetting; 
         
         Batch_BackInStock_Test.skutest.add('testSku');
@@ -94,9 +107,11 @@ private class Batch_BackInStock_Test {
         System.debug('size of comm Sub: ' +  commSuub.size());
         
         Test.startTest();
-        
         Batch_BackInStock batch = new Batch_BackInStock();
-        Test.setMock(HttpCalloutMock.class, new MockHttpResponseGenerator());
+        String responseXml = '<soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/"><soap:Body><RetrieveResponseMsg><Results><StatusMessage>Success</StatusMessage></Results></RetrieveResponseMsg></soap:Body></soap:Envelope>';
+		MockHttpResponseGenerator mockResponse = new MockHttpResponseGenerator(responseXml);
+		Test.setMock(HttpCalloutMock.class, mockResponse);
+        //Test.setMock(HttpCalloutMock.class, new MockHttpResponseGenerator());
         batch.start(null);
         batch.execute(null,commSuub);
         batch.execute(null);
@@ -106,7 +121,4 @@ private class Batch_BackInStock_Test {
         
      	System.assertEquals(productInventory.sku__c, commSuub[0].sku__c);
        }
-   
-   
-	
 }
